# chatgpt_connector

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  discord_bot.py  pyproject.toml  slack_bot.py
.github/workflows/: lint_check.yml  pytest.yml
chatgpt_connector/: connector.py  logger.json  logger.py
lambda/: readme.md
lambda/chatgpt-lambda/: handler.py  requirements.txt  serverless.yml
python_repository_template/: sample.py
slack/: run.py
test/: test_connector.py  test_sample.py
